--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,19 @@
 
 # VS Things
 .vs/
+
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
 x64/
-[D]ebug/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
 
 # Object files
 *.o
